--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_core: ^2.21.0
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
 
 dev_dependencies:
@@ -20,3 +21,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/images/
+    - assets/images/Shrug-bro.png
