--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_core: ^2.21.0
   flutter:
     sdk: flutter
+  flutter_slidable: ^3.0.1
   google_fonts: ^6.1.0
 
 dev_dependencies:
