--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.12.2
+  equatable: ^2.0.5
   firebase_core: ^2.21.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   google_fonts: ^6.1.0
 
 dev_dependencies:
