--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.5
   google_fonts: ^6.1.0
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
